Change the package name

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 ﻿[metadata]
-name = bmtool
-version = 0.1
+name = ak47
+version = 0.01
 author = Jun Chen
 author_email = junc76@gmail.com
-description = 提取C++源文件中的字符串
+description = Provide some tools in C++ development
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/Junch/funniestDemo
+url = https://github.com/Junch/ak47
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
@@ -19,4 +19,4 @@ include_package_data = True
 
 [options.entry_points]
 console_scripts =
-    stringrep = bmtool:main
+    stringrep = ak47:main
