reorganize the code

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,4 +19,4 @@ include_package_data = True
 
 [options.entry_points]
 console_scripts =
-    stringrep = ak47:main
+    stringrep = ak47.string:main
