重构分拆了文件common.py，补充了单元测试

--- a/test_projects/observer/CMakeLists.txt
+++ b/test_projects/observer/CMakeLists.txt
@@ -2,8 +2,6 @@ CMAKE_MINIMUM_REQUIRED (VERSION 3.5)
 
 PROJECT (observer CXX)
 
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-
 IF(WIN32)
     # make the Release version create a PDB
     SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Zi")
@@ -15,3 +13,16 @@ ENDIF()
 
 FILE(GLOB SRCFILES *.cpp)
 ADD_EXECUTABLE(observer ${SRCFILES})
+
+SET_TARGET_PROPERTIES(observer PROPERTIES 
+    CXX_STANDARD 17
+    CXX_STANDARD_PROPERTIES YES
+    CXX_EXTENSIONS NO
+)
+
+ADD_CUSTOM_COMMAND(
+    TARGET observer
+    POST_BUILD
+    COMMAND
+        ${CMAKE_COMMAND} -E copy_if_different ${CMAKE_CURRENT_SOURCE_DIR}/observer.yaml $<TARGET_FILE_DIR:observer>
+)
